these_pasteur/exemples/EsteRML/test/bad/bad2.strl
signal s in
  signal s2 in
    present s2 then emit s end
    ||
    present s then emit s2 end
  end
end.